# sheptun

./: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  start.sh
.github/workflows/: build.yml
backend/: build.py  main.py  requirements-build.txt  requirements.txt
electron/: main.js  portFinder.js  preload.js  pythonManager.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  commands.rs  keep_awake.rs  lib.rs  main.rs  python.rs
